refactor and update code

--- a/app/src/main/res/layout-large/activity_main4.xml
+++ b/app/src/main/res/layout-large/activity_main4.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.rosst.Last.Main4Activity">
+    tools:context="com.example.rosst.Seventh.Main4Activity">
 
     <LinearLayout
         android:layout_width="944dp"
