--- a/app/src/main/res/layout-large/activity_main.xml
+++ b/app/src/main/res/layout-large/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.rosst.Last.MainActivity">
+    tools:context="com.example.rosst.Seventh.MainActivity">
 
     <GridLayout
         android:layout_width="944dp"
