--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.rosst.Last.MainActivity">
+    tools:context="com.example.rosst.Seventh.MainActivity">
 
     <GridLayout
         android:layout_width="344dp"
