--- a/app/src/main/res/layout/activity_main5.xml
+++ b/app/src/main/res/layout/activity_main5.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.rosst.Last.Main5Activity">
+    tools:context="com.example.rosst.Seventh.Main5Activity">
 
 
     <LinearLayout
