--- a/app/src/main/res/layout/button_fragment.xml
+++ b/app/src/main/res/layout/button_fragment.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    tools:context="com.example.rosst.Last.ButtonFragment">
+    tools:context="com.example.rosst.Seventh.ButtonFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
