--- a/app/src/main/res/layout/list_fragment.xml
+++ b/app/src/main/res/layout/list_fragment.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.rosst.Last.List_Fragment">
+    tools:context="com.example.rosst.Seventh.ListViewFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
