--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,6 +3,6 @@
     <item
         android:id="@+id/item1"
         android:showAsAction="always"
-        android:title="Add">
+        android:title="Title">
     </item>
 </menu>
