--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/first"
-        android:title="First"/>
-        tit
-    <item android:id="@+id/list"
-        android:title="List"/>
+    <item android:id="@+id/map"
+        android:title="Map"/>
 </menu>
