--- a/app/src/main/res/layout/list_view_fragment.xml
+++ b/app/src/main/res/layout/list_view_fragment.xml
@@ -5,5 +5,9 @@
     tools:context="com.example.rosst.Seventh.ListViewFragment">
 
     <!-- TODO: Update blank fragment layout -->
+    <ListView
+        android:id="@+id/android:list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </FrameLayout>
